--- a/circle.yml
+++ b/circle.yml
@@ -5,8 +5,8 @@ machine:
 dependencies:
   pre:
     # Set up a virtual host for the site.
-    - echo "sendmail_path=/bin/true" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-    - echo "memory_limit=256M" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+   # - echo "sendmail_path=/bin/true" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+   # - echo "memory_limit=256M" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
     - sudo cp circle/circle.conf /etc/apache2/sites-available/default
     - sudo sed -e "s?%PROJECT_DIR%?$(pwd)/www?g" --in-place /etc/apache2/sites-available/default
     - sudo a2enmod rewrite
