--- a/circle/circle.conf
+++ b/circle/circle.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
   UseCanonicalName Off
 
-  DocumentRoot %PROJECT_DIR%
+  DocumentRoot /var/www
 
-  <Directory %PROJECT_DIR%>
+  <Directory /var/www/>
     Options FollowSymLinks
     AllowOverride All
     RewriteEngine On
