--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
    # - echo "sendmail_path=/bin/true" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
    # - echo "memory_limit=256M" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
     - sudo cp circle/circle.conf /etc/apache2/sites-available/default
-    - sudo sed -e "s?/var/www?$(pwd)/www?g" --in-place /etc/apache2/sites-available/default
+   # - sudo sed -e "s?/var/www?$(pwd)/www?g" --in-place /etc/apache2/sites-available/default
     - sudo a2enmod rewrite
     - sudo service apache2 restart
   override:
